--- a/assets/css/media_queries.css
+++ b/assets/css/media_queries.css
@@ -13,22 +13,23 @@
         line-height: 44px;
     }
 
+    /*Dark Mode button*/
     #dark-btn {
         font-size: 18px;
         line-height: normal;
     }
 
+    /*Google search step section*/
     .step-one,
     .step-two {
         padding-top: 30px;
     }
-
 }
 
 /*Large Laptop*/
 @media (max-width: 1440px) {
 
-    /*Nav Bar*/
+    /*Nav Bar Section*/
     .navbar-light .navbar-brand {
         font-size: 26px;
         letter-spacing: 15px;
@@ -40,14 +41,17 @@
         line-height: 26px;
     }
 
+    /*Dark Mode button*/
     #dark-btn {
         line-height: normal;
     }
 
+    /*Google search step section*/
     .step-one .step-two {
         padding-top: 30px;
     }
 
+    /*Left radio buttons in step three*/
     .left-options {
         margin-left: auto;
         padding: 0 10px;
@@ -55,19 +59,19 @@
         letter-spacing: 4px;
     }
 
+    /*Right radio buttons in step three*/
     .right-options {
         margin-left: 0;
         padding: 0 10px;
         font-size: 12px;
         letter-spacing: 4px;
     }
-
 }
 
 /*Medium Laptop*/
 @media (max-width: 1024px) {
 
-    /*Nav Bar*/
+    /*Nav Bar Section*/
     .navbar-light .navbar-brand {
         font-size: 20px;
         letter-spacing: 10px;
@@ -78,19 +82,22 @@
         line-height: 26px;
     }
 
-    #dark-btn {
-        line-height: normal;
-    }
-
     .nav-link {
         margin-left: 5px;
     }
 
+    /*Dark Mode button*/
+    #dark-btn {
+        line-height: normal;
+    }
+
+    /*Google search step section*/
     .step-one,
     .step-two {
         padding-top: 25px;
     }
 
+    /*Left radio buttons in step three*/
     .left-options {
         font-size: 12px;
         letter-spacing: 0px;
@@ -99,6 +106,7 @@
         margin-left: auto;
     }
 
+    /*Right radio buttons in step three*/
     .right-options {
         font-size: 12px;
         letter-spacing: 0px;
@@ -106,13 +114,12 @@
         padding: 0px 10px;
         margin-left: 0px;
     }
-
 }
 
 /*Small Laptop*/
 @media (max-width: 991px) {
 
-    /*Nav Bar*/
+    /*Nav Bar Section*/
     .navbar-light .navbar-brand {
         font-size: 26px;
         letter-spacing: 10px
@@ -127,6 +134,7 @@
         letter-spacing: 5px;
     }
 
+    /*Google search step section*/
     .step-one {
         padding-top: 45px;
     }
@@ -138,6 +146,7 @@
         padding-top: 30px;
     }
 
+    /*Left radio buttons in step three*/
     .left-options {
         text-align: right;
         font-size: 15px;
@@ -146,6 +155,7 @@
         border-right: 1px solid #808080;
     }
 
+    /*Right radio buttons in step three*/
     .right-options {
         text-align: left;
         font-size: 15px;
@@ -155,25 +165,29 @@
         border-left: 1px solid #808080;
     }
 
-    /*Results Container Show and Hide*/
+    /*Result heading Show and Hide*/
     #results {
         display: none;
     }
 
+    /*Show Heading*/
     .result-heading-show {
         display: block;
         font-size: 20px;
     }
 
+    /*Font awesome icon*/
     .fa-chevron-down {
         font-size: 15px;
     }
 
+    /*Hide Heading*/
     .result-heading-hide {
         display: none;
         font-size: 20px
     }
 
+    /*Font awesome icon*/
     .fa-chevron-up {
         font-size: 15px;
     }
@@ -184,7 +198,7 @@
 /*Tablet*/
 @media (max-width: 768px) {
 
-    /*Nav Bar*/
+    /*Nav Bar Section*/
     .navbar-light .navbar-brand {
         font-size: 26px;
         letter-spacing: 10px
@@ -199,10 +213,12 @@
         letter-spacing: 5px;
     }
 
+    /*Dark Mode button*/
     #dark-btn {
         font-size: 12px;
     }
 
+    /*Google search step section*/
     .step-one {
         padding-top: 45px;
     }
@@ -214,25 +230,29 @@
         padding-top: 30px;
     }
 
-    /*Results Container Show and Hide*/
+    /*Search Results Container*/
     #results {
         display: none;
     }
 
+    /*Show Heading*/
     .result-heading-show {
         display: block;
         font-size: 20px;
     }
 
+    /*Font awesome icon*/
     .fa-chevron-down {
         font-size: 15px;
     }
 
+    /*Hide Heading*/
     .result-heading-hide {
         display: none;
         font-size: 20px
     }
 
+    /*Font awesome icon*/
     .fa-chevron-up {
         font-size: 15px;
     }
@@ -241,7 +261,7 @@
 /*Large Mobile*/
 @media (max-width: 425px) {
 
-    /*Nav Bar*/
+    /*Nav Bar Section*/
     .navbar-light .navbar-brand {
         font-size: 22px;
         margin-right: 0px;
@@ -257,11 +277,12 @@
         letter-spacing: 4px;
     }
 
+    /*Nav bar collapsable icon*/
     .navbar-light .navbar-toggler {
         padding: 1px 6px;
     }
 
-    /*Main section index.html*/
+    /*Google search step section*/
     .step-one,
     .step-two,
     .step-three {
@@ -281,6 +302,7 @@
         padding-top: 30px;
     }
 
+    /*Left radio buttons in step three*/
     .left-options {
         text-align: right;
         font-size: 14px;
@@ -291,6 +313,7 @@
         margin-left: 20px;
     }
 
+    /*Right radio buttons in step three*/
     .right-options {
         text-align: left;
         font-size: 14px;
@@ -300,30 +323,34 @@
         padding: 0px 10px;
     }
 
-    /*Results Container Show and Hide*/
+    /*Search Results Container*/
     #results {
         display: none;
     }
 
+    /*Show Heading*/
     .result-heading-show {
         display: block;
         font-size: 16px;
     }
 
+    /*Font awesome icon*/
     .fa-chevron-down {
         font-size: 10px;
     }
 
+    /*Hide Heading*/
     .result-heading-hide {
         display: none;
         font-size: 16px
     }
 
+    /*Font awesome icon*/
     .fa-chevron-up {
         font-size: 10px;
     }
 
-    /*Footer*/
+    /*Footer logo and link*/
     .social-logos {
         margin-bottom: 5px
     }
@@ -332,6 +359,7 @@
         margin-bottom: 5px;
     }
 
+    /*Bootstrap empty column in footer*/
     .empty-space {
         display: none;
     }
@@ -347,13 +375,14 @@
 /*Medium Mobile*/
 @media (max-width: 375px) {
 
-    /*Nav Bar*/
+    /*Nav Bar Section*/
     .navbar-light .navbar-brand {
         font-size: 19px;
         margin-right: 0px;
         letter-spacing: 2px
     }
 
+    /*Google search step section*/
     .step-two {
         padding-top: 30px;
     }
@@ -367,13 +396,14 @@
 /*Small Mobile*/
 @media (max-width: 320px) {
 
-    /*Nav Bar*/
+    /*Nav Bar Section*/
     .navbar-light .navbar-brand {
         font-size: 15px;
         margin-right: 0px;
         letter-spacing: 2px
     }
 
+    /*Google search step section*/
     .step-two {
         padding-top: 20px;
     }
@@ -382,6 +412,7 @@
         padding-top: 25px;
     }
 
+    /*Left radio buttons in step three*/
     .left-options {
         text-align: right;
         font-size: 12px;
@@ -392,6 +423,7 @@
         margin-left: 20px;
     }
 
+    /*Right radio buttons in step three*/
     .right-options {
         text-align: left;
         font-size: 12px;
@@ -401,22 +433,25 @@
         padding: 0px 10px;
     }
 
-    /*Results Container Show and Hide*/
+    /*Show Heading*/
     .result-heading-show {
         display: block;
         font-size: 15px;
     }
 
+    /*Font awesome icon*/
     .fa-chevron-down {
         font-size: 10px;
         margin-top: 5px;
     }
 
+    /*Hide Heading*/
     .result-heading-hide {
         display: none;
         font-size: 15px
     }
 
+    /*Font awesome icon*/
     .fa-chevron-up {
         font-size: 10px;
         margin-top: 5px;
