mod: added in local search html, css, js

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -291,8 +291,169 @@ button:focus {
 /*Local Search Search Main Element*/
 .local-search {
     display: none;
-    margin-top: 20px;
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
+
+/*This block of code is for the Important notice banner for the text scrolling across*/
+.notice-banner {
+    background-color: #808080;
+    margin-bottom: 10px;
+    line-height: 5px;
+}
+
+.notice-message {
+    color: #ffffff;
+    letter-spacing: 2px;
+    white-space: nowrap;
+    overflow: hidden;
+    display: inline-block;
+    padding-left: 100%;
+    padding-top: 10px;
+    animation: notice-message 30s linear infinite;
+}
+
+@keyframes notice-message {
+    0% {
+        transform: translate(0, 0);
+    }
+
+    100% {
+        transform: translate(-100%, 0);
+    }
+}
+
+#countries-list,
+#city-town-list {
+    width: 75%
+}
+
+/*This styles the reset button for the locals search*/
+#reset-btn-local {
+    margin-top: 6px;
+    text-transform: uppercase;
+    letter-spacing: 5px;
+    height: 35px
+}
+
+/*This styles the three steps divs within the google search section*/
+.step-one-local,
+.step-two-local,
+.step-three-local {
+    background-color: #f0f0f0;
+    height: 200px;
+    text-transform: uppercase;
+    letter-spacing: 5px;
+    text-align: center;
+}
+
+.step-one-local,
+.step-two-local {
+    padding-top: 40px;
+}
+
+.step-two-local {
+    border-left: 2px solid #808080;
+    border-right: 2px solid #808080;
+}
+
+.step-three-local {
+    padding-top: 25px
+}
+
+.step-one-local h6,
+.step-two-local h6,
+.step-three-local h6 {
+    margin-bottom: 10px;
+}
+
+/*This styles the left radio buttons in step three*/
+.left-options-local {
+    text-align: right;
+    text-transform: capitalize;
+    font-size: 15px;
+    border-right: 2px solid #808080;
+    padding: 0px 10px;
+    margin-left: auto;
+    letter-spacing: 3px;
+}
+
+/*This styles the right radio buttons in step three*/
+.right-options-local {
+    text-align: left;
+    text-transform: capitalize;
+    font-size: 15px;
+    padding: 0px 10px;
+    letter-spacing: 3px;
+}
+
+/*bootstrap card class*/
+.card {
+    padding: 20px;
+    background-color: #fff;
+    border-radius: 0px;
+    margin-top: 10px;
+}
+
+.plumber-1,
+.plasterer-1 {
+    border-left: 2px solid #808080;
+    border-right: 2px solid #808080;
+}
+
+#business_heading {
+    font-size: 30px;
+    letter-spacing: 5px;
+    text-align: center;
+}
+
+.business_icon {
+    text-align: center;
+    font-size: 50px
+}
+
+#electrician-info-1,
+#plumber-info-1,
+#carpenter-info-1,
+#mechanic-info-1,
+#plasterer-info-1,
+#decorator-info-1 {
+    display: none;
+    font-size: 16px;
+    text-align: center;
+}
+
+#less-button-1,
+#less-button-2,
+#less-button-3,
+#less-button-4,
+#less-button-5,
+#less-button-6 {
+    display: none;
+}
+
+button {
+    font-size: 16px;
+    border-radius: 5px;
+    display: block;
+    margin: 0 auto;
+    width: 25%;
+    text-align: center;
+    padding: 10px 10px;
+    text-decoration: none;
+    color: #fff;
+}
+
+.btn-outline-dark {
+    display: block;
+    margin: 0 auto;
+}
+
+.btn-outline-dark:hover {
+    color: #ffffff;
+    background-color: #ffffff;
+}
+
 
 /*Back to top button*/
 /*This styles the back to top button*/
