--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -423,6 +423,21 @@ button:focus {
     text-align: center;
 }
 
+table.elec-tb1 {
+    margin-left: auto;
+    margin-right: auto;
+}
+
+table .attrib-col1 {
+    text-align: right;
+    padding-right: 10px;
+    padding-bottom: 5px;
+}
+
+table .attrib-col2 {
+    text-align: left;
+}
+
 #less-button-1,
 #less-button-2,
 #less-button-3,
