--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,6 +10,7 @@ body {
     padding: 0;
     border: 0;
     background-color: #95ff00;
+    overflow: auto;
 }
 
 /*Setting all class row to have no left or right margin*/
@@ -301,31 +302,13 @@ button:focus {
 }
 
 /*This block of code is for the Important notice banner for the text scrolling across*/
-.notice-banner {
-    background-color: #808080;
-    margin-bottom: 10px;
-    line-height: 5px;
-}
-
 .notice-message {
+    background-color: #808080;
     color: #ffffff;
+    padding: 10px;
+    text-align: center;
     letter-spacing: 2px;
-    white-space: nowrap;
-    overflow: hidden;
-    display: inline-block;
-    padding-left: 100%;
-    padding-top: 10px;
-    animation: notice-message 30s linear infinite;
-}
 
-@keyframes notice-message {
-    0% {
-        transform: translate(0, 0);
-    }
-
-    100% {
-        transform: translate(-100%, 0);
-    }
 }
 
 /*This styles the three steps divs within the google search section*/
@@ -538,12 +521,19 @@ button {
 .close {
     position: absolute;
     top: 20px;
-    right: 25px;
+    left: 415px;
     font-size: 35px;
+    padding: 0px;
+    margin: 0px;
+    float: none;
+    font-weight: 700;
+    line-height: 0px;
+    opacity: .5;
 }
 
 .modal-header .close {
-    padding: 0 0;
+    padding: 0;
+    margin: 0;
 }
 
 /*This block styles the radio button for the message subject type*/
